# ergon

./: .gitignore  .mailmap  CHANGELOG.md  CLAUDE.md  CONTRIBUTING.md  Cargo.toml  SECURITY.md  release-notes.md
.claude/rules/: privacy.md  rust.md
.githooks/: pre-commit
config/services/: aletheia-memory.service
crates/hermeneus/src/cc/: process.rs
crates/integration-tests/tests/: knowledge_recall.rs
crates/mneme/: Cargo.toml
crates/mneme/src/: knowledge.rs  lib.rs  store.rs  types.rs
docs/: ARCHITECTURE.md  DISPOSITION.md  PROJECT.md  RUNBOOK.md  STANDARDS.md
docs/policy/: agent-contribution.md
docs/specs/: 24_aletheia-linux.md  29_ui-layout-and-theming.md  32_dianoia-v2.md  43_rust-rewrite.md  44_oikos.md  45_coworking-workspace.md  45_theatron-research.md  45_theatron.md  README.md
docs/specs/archive/: 04_cost-aware-orchestration.md  07_knowledge-graph.md  09_graph-visualization.md  13_sub-agent-workforce.md  14_development-workflow.md  16_efficiency.md  DECISIONS.md
infrastructure/memory/sidecar/aletheia_memory/: entity_resolver.py
infrastructure/memory/sidecar/tests/: test_fts.py
infrastructure/prosoche/prosoche/: digest.py
infrastructure/prosoche/prosoche/signals/: activity.py
infrastructure/runtime/: package.json  vitest.config.ts
infrastructure/runtime/src/: aletheia.ts
infrastructure/runtime/src/agora/: routing.test.ts
instance.example/: README.md
memory/: 2026-03-01.md
scripts/: scrub-callback.py
shared/templates/sections/: safety.md
ui/: index.html  package.json
ui/src/styles/: global.css
(+35 files in other folders)
