[package]
name = "aletheia-mneme"
version = "0.1.0"
description = "Session store and memory engine for Aletheia"
edition.workspace = true
license.workspace = true
repository.workspace = true
rust-version.workspace = true

[lints]
workspace = true

[dependencies]
aletheia-koina = { path = "../koina" }
rusqlite = { version = "0.33", features = ["bundled"] }
serde = { workspace = true }
serde_json = { workspace = true }
snafu = { workspace = true }
tracing = { workspace = true }

[dev-dependencies]
static_assertions = { workspace = true }
tempfile = "3"
